# store_backend

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/model/: Book.h
src/ui/: BookMarket.cpp
